hphp/hack/test/typecheck/typedef4.php.exp
File "typedef4.php", line 18, characters 7-15:
Expected a `trait` but got a type alias. (Naming[2052])
File "typedef4.php", line 14, characters 6-14:
Alias definition is here.
File "typedef4.php", line 14, characters 18-18:
`A` is uninstantiable (Typing[4002])
File "typedef4.php", line 12, characters 7-7:
Declaration is here
